apps/whoami/overlays/store-0002/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.8.7
